# typescript-rs

./: .gitmodules  AGENTS.md  Cargo.toml  README.md
crates/ts-api/: Cargo.toml
crates/ts-api/src/: callbackfs.rs  conn.rs  conn_async.rs  conn_sync.rs  lib.rs  proto.rs  proto_test.rs  protocol.rs  protocol_jsonrpc.rs  protocol_msgpack.rs  server.rs  session.rs  stringer_generated.rs  transport.rs  transport_unix.rs  transport_windows.rs
crates/ts-ast/: Cargo.toml
crates/ts-ast/src/: arena.rs  ast.rs  ast_generated.rs  ast_mutation.rs  checkflags.rs  diagnostic.rs  flags_aliases_generated.rs  flow.rs  functionflags.rs  ids.rs  kind_aliases_generated.rs  kind_generated.rs  kind_stringer_generated.rs  lib.rs  modifierflags.rs  nodeflags.rs  parseoptions.rs  positionmap.rs  positionmap_test.rs  precedence.rs  subtreefacts.rs  symbol.rs  symbolflags.rs  tokenflags.rs
crates/ts-astnav/: Cargo.toml
crates/ts-astnav/src/: lib.rs  testmain_test.rs  tokens_test.rs
crates/ts-binder/: Cargo.toml
crates/ts-binder/src/: binder.rs  binder_test.rs  lib.rs  nameresolver.rs  program_binding_state.rs  referenceresolver.rs
crates/ts-checker/: Cargo.toml
crates/ts-checker/src/: checker.rs  checker_test.rs  emitresolver.rs  exports.rs  flow.rs  grammarchecks.rs  inference.rs  jsx.rs  lib.rs  nodebuilder.rs  nodebuilder_hover.rs  nodebuilderimpl.rs  nodebuilderscopes.rs  nodecopy.rs  printer.rs  pseudotypenodebuilder.rs  relater.rs  semantic.rs  services.rs  stringer_generated.rs  symbolaccessibility.rs  symboltracker.rs  tracer.rs  tracer_test.rs  types.rs  utilities.rs
crates/ts-cli/: Cargo.toml
crates/ts-cli/src/: api.rs  enablevtprocessing_windows.rs  isprocessalive_other.rs  isprocessalive_unix.rs  isprocessalive_windows.rs  lsp.rs  main.rs  sys.rs
crates/ts-compiler/: Cargo.toml
crates/ts-compiler/src/: checkerpool.rs  emitHost.rs  emit_test.rs  emitter.rs  fileInclude.rs  fileloader.rs  filesparser.rs  host.rs  includeprocessor.rs  lib.rs  processingDiagnostic.rs  program.rs  program_test.rs  projectreferencedtsfakinghost.rs  projectreferencefilemapper.rs  projectreferenceparser.rs
crates/ts-core/: Cargo.toml
crates/ts-core/src/: arena.rs  bfs.rs  bfs_test.rs  binarysearch.rs  buildoptions.rs  compileroptions.rs  context.rs  core.rs  languagevariant.rs  languagevariant_stringer_generated.rs  lib.rs  linkstore.rs  linkstore_test.rs  modulekind.rs  modulekind_stringer_generated.rs  nodemodules.rs  parsedoptions.rs  pattern.rs  projectreference.rs  scriptkind.rs  scriptkind_stringer_generated.rs  scripttarget.rs  scripttarget_stringer_generated.rs  semaphore.rs  stack.rs  text.rs  textchange.rs  tristate.rs  tristate_stringer_generated.rs  typeacquisition.rs  version.rs  watchoptions.rs  workgroup.rs
crates/ts-diagnostics/: Cargo.toml
crates/ts-diagnostics/src/: category.rs  diagnostics.rs  diagnostics_aliases_generated.rs  diagnostics_generated.rs  diagnostics_test.rs  generate.rs  lib.rs  loc_generated.rs  stringer_generated.rs
crates/ts-diagnosticwriter/: Cargo.toml
crates/ts-diagnosticwriter/src/: diagnosticwriter.rs  lib.rs
crates/ts-execute/: Cargo.toml
crates/ts-execute/src/: command_line.rs  lib.rs  watcher.rs
crates/ts-format/: Cargo.toml
crates/ts-format/src/: api.rs  api_test.rs  comment_test.rs  context.rs  format_test.rs  indent.rs  indent_getindentation_test.rs  indent_test.rs  lib.rs  lsutil.rs  rule.rs  rulecontext.rs  rules.rs  rulesmap.rs  scanner.rs  span.rs  util.rs
crates/ts-fourslash/: Cargo.toml
crates/ts-fourslash/src/: baselineutil.rs  fourslash.rs  lib.rs  semantictokens.rs  skip_if_failing.rs  statebaseline.rs  test_parser.rs
crates/ts-ls/: Cargo.toml
crates/ts-ls/src/: api.rs  autoinsert.rs  callhierarchy.rs  codeactions.rs  codeactions_fixclassincorrectlyimplementsinterface.rs  codeactions_fixmissingtypeannotation.rs  codeactions_importfixes.rs  codeactions_missingmemberfixer.rs  codeactions_spelling.rs  codelens.rs  completions.rs  constants.rs  crossproject.rs  definition.rs  diagnostics.rs  documenthighlights.rs  file_rename.rs  findallreferences.rs  folding.rs  format.rs  format_test.rs  host.rs  hover.rs  importTracker.rs  inlay_hints.rs  languageservice.rs  lib.rs  linkedediting.rs  organizeimports.rs  rename.rs  selectionranges.rs  semantictokens.rs  signaturehelp.rs  source_map.rs  sourcedefinition.rs  string_completions.rs  symbols.rs  utilities.rs
crates/ts-ls/tests/: autoimport_registry_test.rs
crates/ts-lsp/: Cargo.toml
crates/ts-lsp/src/: lib.rs  logger.rs  progress.rs  progress_test.rs  replay_test.rs  server.rs  server_completion_test.rs  server_progress_test.rs  server_projectinfo_test.rs  server_projectreference_updates_test.rs  server_semantictokens_test.rs  server_shutdown_test.rs  stack_sanitizer.rs  stack_sanitizer_test.rs
crates/ts-lsproto/: Cargo.toml
crates/ts-lsproto/src/: baseproto.rs  baseproto_test.rs  jsonrpc.rs  lib.rs  lsp.rs  lsp_json_test.rs  lsp_test.rs  util.rs
crates/ts-module/: Cargo.toml
crates/ts-module/src/: cache.rs  lib.rs  resolver.rs  resolver_test.rs  types.rs  types_test.rs  util.rs  util_test.rs
crates/ts-modulespecifiers/: Cargo.toml
crates/ts-modulespecifiers/src/: compare.rs  lib.rs  preferences.rs  specifiers.rs  specifiers_test.rs  types.rs  util.rs
crates/ts-packagejson/: Cargo.toml
crates/ts-packagejson/src/: cache.rs  expected.rs  expected_test.rs  exportsorimports.rs  exportsorimports_test.rs  jsonvalue.rs  jsonvalue_test.rs  lib.rs  packagejson.rs  packagejson_test.rs  validated.rs
crates/ts-parser/: Cargo.toml
crates/ts-parser/src/: lib.rs  parser.rs  parser_test.rs  references.rs  types.rs  utilities.rs
crates/ts-printer/: Cargo.toml
crates/ts-printer/src/: changetrackerwriter.rs  emitcontext.rs  emitflags.rs  emithost.rs  emitresolver.rs  factory.rs  (+13 more)
crates/ts-project/: Cargo.toml
crates/ts-sourcemap/: Cargo.toml
crates/ts-testrunner/: Cargo.toml  build.rs  compiler_test_skip_files.txt
crates/ts-testutil/: Cargo.toml
crates/ts-tracing/: Cargo.toml
crates/ts-transformers/: Cargo.toml
crates/ts-tsoptions/: Cargo.toml
(+542 files in other folders)
