[package]
name = "ts-cli"
version = "0.1.0"
edition = "2024"

[features]
default = []
pprof = ["dep:ts-pprof", "ts-execute/pprof", "ts-lsp/pprof"]

[dependencies]
enable-ansi-support = "0.3.1"
libc = "0.2"
rustix = { version = "1.1.4", features = ["process", "termios"] }
signal-hook = "0.4.4"
sysinfo = "0.39.2"
terminal_size = "0.4.4"
mimalloc = { workspace = true }
ts-api = { path = "../ts-api" }
ts-bundled = { path = "../ts-bundled" }
ts-core = { path = "../ts-core" }
ts-execute = { path = "../ts-execute" }
ts-lsp = { path = "../ts-lsp" }
ts-pprof = { path = "../ts-pprof", optional = true }
ts-tspath = { path = "../ts-tspath" }
ts-vfs = { path = "../ts-vfs" }
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_Threading",
] }
