[package]
name = "ts-fourslash"
version = "0.1.0"
edition = "2024"

[dependencies]
serde.workspace = true
serde_json.workspace = true
lsp_types_full = { package = "lsp-types", version = "0.97.0" }
ts-bundled = { path = "../ts-bundled" }
ts-compiler = { path = "../ts-compiler" }
ts-core = { path = "../ts-core" }
ts-collections = { path = "../ts-collections" }
ts-json = { path = "../ts-json" }
ts-ls = { path = "../ts-ls" }
ts-lsp = { path = "../ts-lsp", features = ["test-support"] }
ts-lsproto = { path = "../ts-lsproto" }
ts-modulespecifiers = { path = "../ts-modulespecifiers" }
ts-project = { path = "../ts-project" }
ts-testutil = { path = "../ts-testutil" }
ts-testrunner = { path = "../ts-testrunner" }
ts-tsoptions = { path = "../ts-tsoptions" }
ts-tspath = { path = "../ts-tspath" }
ts-vfs = { path = "../ts-vfs" }
