[package]
name = "ts-printer"
version = "0.1.0"
edition = "2024"

[dependencies]
ts-ast = { path = "../ts-ast" }
ts-binder = { path = "../ts-binder" }
ts-collections = { path = "../ts-collections" }
ts-core = { path = "../ts-core" }
ts-evaluator = { path = "../ts-evaluator" }
ts-nodebuilder = { path = "../ts-nodebuilder" }
ts-scanner = { path = "../ts-scanner" }
ts-sourcemap = { path = "../ts-sourcemap" }
ts-stringutil = { path = "../ts-stringutil" }
ts-tsoptions = { path = "../ts-tsoptions" }
ts-tspath = { path = "../ts-tspath" }

[dev-dependencies]
ts-parser = { path = "../ts-parser" }
