[package]
name = "ts-project"
version = "0.1.0"
edition = "2024"

[features]
nightly_bench = []

[dependencies]
ts-collections = { path = "../ts-collections" }
ts-ast = { path = "../ts-ast" }
ts-checker = { path = "../ts-checker" }
ts-compiler = { path = "../ts-compiler" }
ts-core = { path = "../ts-core" }
ts-diagnostics = { path = "../ts-diagnostics" }
ts-ls = { path = "../ts-ls" }
ts-lsproto = { path = "../ts-lsproto" }
ts-locale = { path = "../ts-locale" }
ts-module = { path = "../ts-module" }
ts-packagejson = { path = "../ts-packagejson" }
ts-parser = { path = "../ts-parser" }
ts-project-support = { path = "../ts-project-support" }
ts-semver = { path = "../ts-semver" }
ts-sourcemap = { path = "../ts-sourcemap" }
ts-tsoptions = { path = "../ts-tsoptions" }
ts-tspath = { path = "../ts-tspath" }
ts-vfs = { path = "../ts-vfs" }
serde_json = { workspace = true }
xxhash-rust = { workspace = true }
lsp_types_full = { package = "lsp-types", version = "0.97.0" }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
ts-bundled = { path = "../ts-bundled" }
ts-glob = { path = "../ts-glob" }
ts-testutil = { path = "../ts-testutil" }
