[package]
name = "ts-tsoptions"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
ts-core = { path = "../ts-core" }
ts-ast = { path = "../ts-ast" }
ts-collections = { path = "../ts-collections" }
ts-diagnostics = { path = "../ts-diagnostics" }
ts-locale = { path = "../ts-locale" }
ts-module = { path = "../ts-module" }
ts-outputpaths = { path = "../ts-outputpaths" }
ts-parser = { path = "../ts-parser" }
ts-scanner = { path = "../ts-scanner" }
ts-tspath = { path = "../ts-tspath" }
ts-vfs = { path = "../ts-vfs" }
ts-glob = { path = "../ts-glob" }
